syntax = "proto3";

package l2smdns;

option go_package = "github.com/Networks-it-uc3m/l2sm-dns/api/v1/dns";

service DnsService {
  rpc AddEntry(AddEntryRequest) returns (AddEntryResponse);
}

message AddEntryRequest {
  DNSEntry entry = 1;
}

message DNSEntry {
  string scope = 4;
  string network = 3;
  string pod_name = 1;
  string ip_address = 2;
}

message AddEntryResponse {
  string message = 1;
}

